# cmu-airlab-ps

./: .gitignore  README.html  README.md
catkin_ws_airlab/devel/: .catkin  .rosinstall  setup.sh
catkin_ws_airlab/devel/lib/pkgconfig/: plane_segmentation_tutorial.pc
catkin_ws_airlab/devel/lib/plane_segmentation_tutorial/: planefitting
catkin_ws_airlab/devel/share/plane_segmentation_tutorial/cmake/: plane_segmentation_tutorialConfig.cmake
catkin_ws_airlab/src/plane_segmentation_tutorial/: #CMakeLists.txt#  README.md  mainpage.dox
catkin_ws_airlab/src/plane_segmentation_tutorial/launch/: plane_seg.rviz  sample.launch
catkin_ws_airlab/src/plane_segmentation_tutorial/src/: plane_segmentation_tutorial_node.cpp  simplePlaneFitting.cpp
document/: cmu_airlab_report.aux  cmu_airlab_report.tex
qn2/cpp_eigen_files/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  eigen_calc  eigen_calc.cpp
qn2/cpp_eigen_files/catkin_generated/: generate_cached_setup.py  setup_cached.sh
qn2/cpp_eigen_files/devel/: .catkin  .rosinstall  setup.sh
qn2/cpp_eigen_files/gtest/: CTestTestfile.cmake  Makefile
qn2/document/: _region_.tex  cmu_airlab_report.aux  cmu_airlab_report.tex  compile.sh
qn2/document/auto/: cmu_airlab_report.el
stereo_catkin_ws_airlab/: t1.txt
stereo_catkin_ws_airlab/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
stereo_catkin_ws_airlab/devel/lib/pkgconfig/: stereo_assignment.pc
stereo_catkin_ws_airlab/devel/lib/stereo_assignment/: stereo_assignment_main
stereo_catkin_ws_airlab/src/stereo_assignment/: CMakeLists.txt  readme.md
stereo_catkin_ws_airlab/src/stereo_assignment/data/: data.json  left_calib.json  out.pcd  right_calib.json
stereo_catkin_ws_airlab/src/stereo_assignment/launch/: stereo.launch
stereo_catkin_ws_airlab/src/stereo_assignment/src/: #map_classes.cpp#  #stereo_code.cpp#  .#map_classes.cpp  extra_functions.cpp  main.cpp  map_classes.cpp  stereo_code.cpp  stereo_match.cpp
(+1 files in other folders)
